Fix scrollbars being visible on small screens on the test screen

--- a/src/style.css
+++ b/src/style.css
@@ -143,7 +143,7 @@ p {
     overflow-y: scroll;
     z-index: 25;
     transition: 0.3s opacity;
-    padding: 4px 24px;
+    padding: 4px 12px;
 }
 
 #theory h3 {
@@ -235,7 +235,8 @@ input[type=text] {
     padding-right: 6px;
     font-family: OpenSans, Helvetica, Arial;
     font-size: 14px;
-    min-width: 300px;
+    min-width: 240px;
+    box-sizing: border-box;
 }
 
 .test-card {
@@ -243,6 +244,7 @@ input[type=text] {
     padding: 16px;
     border: 1px solid black;
     border-radius: 8px;
+    box-sizing: border-box;
 }
 
 .test-timer {
